UI: Fix missing word-wrap in tooltips

--- a/ui/src/sass/_tool-tip.scss
+++ b/ui/src/sass/_tool-tip.scss
@@ -9,6 +9,7 @@
 
     /* Tooltip text */
     .tool-tip--content {
+        white-space: initial;
         visibility: hidden;
         width: 40em;
         background-color: #555;
